Word count program in spark

--- a/Spark/Spark_1.ipynb
+++ b/Spark/Spark_1.ipynb
@@ -18,6 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#please first upload the text file to HDFS temp in dataproc\n",
     "hdfs_path = \"/temp/wordcount.txt\"\n",
     "# Read the text file from HDFS\n",
     "# Ensure that the HDFS path is correct and accessible\n",
