Refactor Spark notebook: streamline DataFrame operations and remove unused RDD examples

--- a/Spark/Spark_2.ipynb
+++ b/Spark/Spark_2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "23f70346",
+   "metadata": {},
+   "source": [
+    "## Spark DataFrame Operations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "498a22d2-d5e4-4954-b606-97730f41c8d4",
@@ -184,402 +192,6 @@
    ],
    "source": [
     "df_list.show()  # Display the DataFrame without truncating the output"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "184808e4-1233-4fda-a094-1018493582b5",
-   "metadata": {},
-   "source": [
-    "##### RDD -> Risilient Distributed Datasets (RDDs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "249634ad-317a-4062-936d-3723934ed07b",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "data_rdd=spark.sparkContext.parallelize(retail_orders_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "71775547-2d4d-490c-9aff-e743c45593a4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_rdd.getNumPartitions()  # Check the number of partitions in the RDD"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b8ee7cf-ae27-4612-a957-cfc4446da799",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "* first() - Returns the first element in the RDD.\n",
-    "* count() - Returns the number of elements in the RDD.\n",
-    "* take(n) - Returns the first n elements in the RDD.\n",
-    "* collect() - Returns all the elements in the RDD as a list."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "206e4612-efaf-424f-b61a-187314aa6d88",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Header: {'OrderID': 'ORD001', 'CustomerID': 'CUST101', 'ProductID': 'PROD001', 'ProductName': 'Laptop A', 'Quantity': 1, 'UnitPrice': 1200.0, 'OrderDate': '2024-01-15', 'Country': 'USA'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "header=data_rdd.first()  # Get the header (first row) of the DataFrame\n",
-    "print(\"Header:\", header)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "9f96fe3c-5cf2-4efb-8ace-ca848210992c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of elements in the RDD: 22\n"
-     ]
-    }
-   ],
-   "source": [
-    "noOfElements = data_rdd.count()  # Count the number of elements in the RDD\n",
-    "print(\"Number of elements in the RDD:\", noOfElements)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "07db8bab-9547-44ea-a736-8661c1286bf1",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'OrderID': 'ORD001',\n",
-       "  'CustomerID': 'CUST101',\n",
-       "  'ProductID': 'PROD001',\n",
-       "  'ProductName': 'Laptop A',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 1200.0,\n",
-       "  'OrderDate': '2024-01-15',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD001',\n",
-       "  'CustomerID': 'CUST101',\n",
-       "  'ProductID': 'PROD003',\n",
-       "  'ProductName': 'Mouse XYZ',\n",
-       "  'Quantity': 2,\n",
-       "  'UnitPrice': 25.5,\n",
-       "  'OrderDate': '2024-01-15',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD002',\n",
-       "  'CustomerID': 'CUST102',\n",
-       "  'ProductID': 'PROD002',\n",
-       "  'ProductName': 'Smartphone B',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 850.0,\n",
-       "  'OrderDate': '2024-01-16',\n",
-       "  'Country': 'Canada'},\n",
-       " {'OrderID': 'ORD003',\n",
-       "  'CustomerID': 'CUST101',\n",
-       "  'ProductID': 'PROD004',\n",
-       "  'ProductName': 'Keyboard Pro',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 75.0,\n",
-       "  'OrderDate': '2024-01-17',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD003',\n",
-       "  'CustomerID': 'CUST101',\n",
-       "  'ProductID': 'PROD005',\n",
-       "  'ProductName': 'Webcam HD',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 49.99,\n",
-       "  'OrderDate': '2024-01-17',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD004',\n",
-       "  'CustomerID': 'CUST103',\n",
-       "  'ProductID': 'PROD001',\n",
-       "  'ProductName': 'Laptop A',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 1200.0,\n",
-       "  'OrderDate': '2024-01-18',\n",
-       "  'Country': 'UK'},\n",
-       " {'OrderID': 'ORD004',\n",
-       "  'CustomerID': 'CUST103',\n",
-       "  'ProductID': 'PROD006',\n",
-       "  'ProductName': 'Monitor 27in',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 300.0,\n",
-       "  'OrderDate': '2024-01-18',\n",
-       "  'Country': 'UK'},\n",
-       " {'OrderID': 'ORD005',\n",
-       "  'CustomerID': 'CUST104',\n",
-       "  'ProductID': 'PROD007',\n",
-       "  'ProductName': 'Headphones ANC',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 199.99,\n",
-       "  'OrderDate': '2024-01-19',\n",
-       "  'Country': 'Australia'},\n",
-       " {'OrderID': 'ORD006',\n",
-       "  'CustomerID': 'CUST105',\n",
-       "  'ProductID': 'PROD008',\n",
-       "  'ProductName': 'External SSD 1TB',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 150.0,\n",
-       "  'OrderDate': '2024-01-20',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD006',\n",
-       "  'CustomerID': 'CUST105',\n",
-       "  'ProductID': 'PROD003',\n",
-       "  'ProductName': 'Mouse XYZ',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 25.5,\n",
-       "  'OrderDate': '2024-01-20',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD007',\n",
-       "  'CustomerID': 'CUST102',\n",
-       "  'ProductID': 'PROD009',\n",
-       "  'ProductName': 'Printer Laser',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 220.0,\n",
-       "  'OrderDate': '2024-01-21',\n",
-       "  'Country': 'Canada'},\n",
-       " {'OrderID': 'ORD008',\n",
-       "  'CustomerID': 'CUST106',\n",
-       "  'ProductID': 'PROD010',\n",
-       "  'ProductName': 'Smartwatch X',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 299.99,\n",
-       "  'OrderDate': '2024-01-22',\n",
-       "  'Country': 'Germany'},\n",
-       " {'OrderID': 'ORD009',\n",
-       "  'CustomerID': 'CUST101',\n",
-       "  'ProductID': 'PROD002',\n",
-       "  'ProductName': 'Smartphone B',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 850.0,\n",
-       "  'OrderDate': '2024-01-23',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD010',\n",
-       "  'CustomerID': 'CUST107',\n",
-       "  'ProductID': 'PROD004',\n",
-       "  'ProductName': 'Keyboard Pro',\n",
-       "  'Quantity': 2,\n",
-       "  'UnitPrice': 75.0,\n",
-       "  'OrderDate': '2024-01-24',\n",
-       "  'Country': 'France'},\n",
-       " {'OrderID': 'ORD011',\n",
-       "  'CustomerID': 'CUST108',\n",
-       "  'ProductID': 'PROD001',\n",
-       "  'ProductName': 'Laptop A',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 1200.0,\n",
-       "  'OrderDate': '2024-01-25',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD011',\n",
-       "  'CustomerID': 'CUST108',\n",
-       "  'ProductID': 'PROD005',\n",
-       "  'ProductName': 'Webcam HD',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 49.99,\n",
-       "  'OrderDate': '2024-01-25',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD012',\n",
-       "  'CustomerID': 'CUST109',\n",
-       "  'ProductID': 'PROD007',\n",
-       "  'ProductName': 'Headphones ANC',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 199.99,\n",
-       "  'OrderDate': '2024-01-26',\n",
-       "  'Country': 'Japan'},\n",
-       " {'OrderID': 'ORD013',\n",
-       "  'CustomerID': 'CUST101',\n",
-       "  'ProductID': 'PROD003',\n",
-       "  'ProductName': 'Mouse XYZ',\n",
-       "  'Quantity': 3,\n",
-       "  'UnitPrice': 25.5,\n",
-       "  'OrderDate': '2024-01-27',\n",
-       "  'Country': 'USA'},\n",
-       " {'OrderID': 'ORD014',\n",
-       "  'CustomerID': 'CUST110',\n",
-       "  'ProductID': 'PROD006',\n",
-       "  'ProductName': 'Monitor 27in',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 300.0,\n",
-       "  'OrderDate': '2024-01-28',\n",
-       "  'Country': 'UK'},\n",
-       " {'OrderID': 'ORD015',\n",
-       "  'CustomerID': 'CUST102',\n",
-       "  'ProductID': 'PROD008',\n",
-       "  'ProductName': 'External SSD 1TB',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 150.0,\n",
-       "  'OrderDate': '2024-01-29',\n",
-       "  'Country': 'Canada'},\n",
-       " {'OrderID': 'ORD016',\n",
-       "  'CustomerID': 'CUST103',\n",
-       "  'ProductID': 'PROD009',\n",
-       "  'ProductName': 'Printer Laser',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 220.0,\n",
-       "  'OrderDate': '2024-01-30',\n",
-       "  'Country': 'UK'},\n",
-       " {'OrderID': 'ORD017',\n",
-       "  'CustomerID': 'CUST104',\n",
-       "  'ProductID': 'PROD010',\n",
-       "  'ProductName': 'Smartwatch X',\n",
-       "  'Quantity': 1,\n",
-       "  'UnitPrice': 299.99,\n",
-       "  'OrderDate': '2024-01-31',\n",
-       "  'Country': 'Australia'}]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_rdd.collect()  # Collect the RDD to view its contents"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "52717a21-f4b3-410a-9601-723d5bcf7f9a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total quantity per ProductID:\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[('PROD003', 6),\n",
-       " ('PROD005', 2),\n",
-       " ('PROD007', 2),\n",
-       " ('PROD008', 2),\n",
-       " ('PROD009', 2),\n",
-       " ('PROD001', 3),\n",
-       " ('PROD002', 2),\n",
-       " ('PROD004', 3),\n",
-       " ('PROD006', 2),\n",
-       " ('PROD010', 2)]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# reduceByKey example\n",
-    "from operator import add\n",
-    "total_quantity = data_rdd.map(lambda x: (x[\"ProductID\"], x[\"Quantity\"])).reduceByKey(add)\n",
-    "print(\"Total quantity per ProductID:\")\n",
-    "total_quantity.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "ed20f67e-b845-412b-bded-279f8ab5d9b4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Count by value for ProductID and Quantity:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(int,\n",
-       "            {('PROD001', 1): 3,\n",
-       "             ('PROD003', 2): 1,\n",
-       "             ('PROD002', 1): 2,\n",
-       "             ('PROD004', 1): 1,\n",
-       "             ('PROD005', 1): 2,\n",
-       "             ('PROD006', 1): 2,\n",
-       "             ('PROD007', 1): 2,\n",
-       "             ('PROD008', 1): 2,\n",
-       "             ('PROD003', 1): 1,\n",
-       "             ('PROD009', 1): 2,\n",
-       "             ('PROD010', 1): 2,\n",
-       "             ('PROD004', 2): 1,\n",
-       "             ('PROD003', 3): 1})"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# countByValue example\n",
-    "count_by_value = data_rdd.map(lambda x: (x[\"ProductID\"], x[\"Quantity\"])).countByValue()\n",
-    "print(\"Count by value for ProductID and Quantity:\")\n",
-    "count_by_value"
    ]
   },
   {
