--- a/Spark/Spark_2.ipynb
+++ b/Spark/Spark_2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "498a22d2-d5e4-4954-b606-97730f41c8d4",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "1564e666-f171-4cd3-8e47-f9f07097c695",
    "metadata": {
     "collapsed": true,
@@ -32,15 +32,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "25/06/23 13:40:28 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark=SparkSession.builder.appName(\"Rdd_operations\").getOrCreate()"
    ]
@@ -894,11 +886,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f974c4a3-fa48-47f8-830c-be9bd08c9c0e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark.stop()  # Cleanly shutdown the session"
+   ]
   }
  ],
  "metadata": {
