--- a/Spark/Spark-Pratice/Pratice-2.ipynb
+++ b/Spark/Spark-Pratice/Pratice-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "90286add",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "5460c424",
    "metadata": {},
    "outputs": [],
@@ -27,8 +27,9 @@
     "            # Create new session if none exists\n",
     "            spark = (\n",
     "                SparkSession.builder.appName(\"sparkDataframe\")\n",
-    "                .config(\"spark.sql.execution.pyspark.udf.faulthandler.enabled\", \"true\")\n",
-    "                .config(\"spark.python.worker.faulthandler.enabled\", \"true\")\n",
+    "                .master(\"local[*]\")\n",
+    "                .config(\"spark.executor.memory\", \"2g\")\n",
+    "                .config(\"spark.driver.memory\", \"2g\")\n",
     "                .getOrCreate()\n",
     "            )\n",
     "        return spark\n",
@@ -36,8 +37,8 @@
     "        # If anything goes wrong, create fresh session\n",
     "        spark = (\n",
     "            SparkSession.builder.appName(\"sparkDataframe\")\n",
-    "            .config(\"spark.sql.execution.pyspark.udf.faulthandler.enabled\", \"true\")\n",
-    "            .config(\"spark.python.worker.faulthandler.enabled\", \"true\")\n",
+    "            .config(\"spark.executor.memory\", \"2g\")\n",
+    "            .config(\"spark.driver.memory\", \"2g\")\n",
     "            .getOrCreate()\n",
     "        )\n",
     "        return spark"
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "id": "0041e507",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "ab6a50e5",
    "metadata": {},
    "outputs": [
@@ -82,13 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "7beb6113",
    "metadata": {},
    "outputs": [],
    "source": [
     "retail_orders_data = [\n",
-    "    {\"OrderID\": \"ORD001\", \"CustomerID\": \"CUST101\", \"ProductID\": \"PROD001\", \"ProductName\": \"Laptop A\", \"Quantity\": 1, \"UnitPrice\": 1200.00, \"OrderDate\": \"2024-01-15\", \"Country\": \"USA\"},\n",
     "    {\"OrderID\": \"ORD001\", \"CustomerID\": \"CUST101\", \"ProductID\": \"PROD003\", \"ProductName\": \"Mouse XYZ\", \"Quantity\": 2, \"UnitPrice\": 25.50, \"OrderDate\": \"2024-01-15\", \"Country\": \"USA\"},\n",
     "    {\"OrderID\": \"ORD002\", \"CustomerID\": \"CUST102\", \"ProductID\": \"PROD002\", \"ProductName\": \"Smartphone B\", \"Quantity\": 1, \"UnitPrice\": 850.00, \"OrderDate\": \"2024-01-16\", \"Country\": \"Canada\"},\n",
     "    {\"OrderID\": \"ORD003\", \"CustomerID\": \"CUST101\", \"ProductID\": \"PROD004\", \"ProductName\": \"Keyboard Pro\", \"Quantity\": 1, \"UnitPrice\": 75.00, \"OrderDate\": \"2024-01-17\", \"Country\": \"USA\"},\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "e5f74267",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "5a54c841",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "648787f0",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_list.show()"
+    "#df_list.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f4c376a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "usa_orders=df_list.filter(col(\"Country\")==\"USA\")\n",
+    "print(usa_orders.collect())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b01bc4b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantity_product=df_list.filter(col(\"quantity\")>1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "905a7137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_revenu=df_list.withColumn(\"totalRevenu\",col(\"quantity\")*col(\"price\"))\n",
+    "total_revenu.select(\"order_id\",\"totalRevenu\").show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc00db03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#spark.stop()"
    ]
   }
  ],
